--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,43 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- main
+  branches:
+    include:
+      - main
+      - dev
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
+
+variables:
+  pythonVersion: '3.11'
+  dockerRegistryServiceConnection: ''
+  imageRepository: 'worknexus'
+  containerRegistry: ''
+  tag: '$(Build.BuildId)'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '$(pythonVersion)'
+      addToPath: true
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+  - script: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt || echo "No requirements.txt yet"
+    displayName: 'Install dependencies'
+
+  - script: |
+      echo "Running lint and unit tests..."
+      python -m unittest discover tests || echo "No tests yet"
+    displayName: 'Run tests'
+
+  - task: Docker@2
+    displayName: Build Docker image
+    inputs:
+      command: build
+      Dockerfile: '**/Dockerfile'
+      tags: |
+        $(tag)
+
+  - script: |
+      echo "✅ CI build completed successfully for WorkNexus!"
+    displayName: 'Build completion'
