--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,12 +9,13 @@ pool:
 
 variables:
   pythonVersion: '3.11'
-  dockerRegistryServiceConnection: ''
   imageRepository: 'worknexus'
-  containerRegistry: ''
   tag: '$(Build.BuildId)'
 
 steps:
+  - checkout: self
+    persistCredentials: true
+
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '$(pythonVersion)'
@@ -22,22 +23,23 @@ steps:
 
   - script: |
       python -m pip install --upgrade pip
-      pip install -r requirements.txt || echo "No requirements.txt yet"
+      if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "No requirements.txt"; fi
     displayName: 'Install dependencies'
 
   - script: |
-      echo "Running lint and unit tests..."
-      python -m unittest discover tests || echo "No tests yet"
+      echo "Running tests (if any)..."
+      if [ -d tests ]; then python -m unittest discover tests || true; else echo "No tests directory"; fi
     displayName: 'Run tests'
 
   - task: Docker@2
     displayName: Build Docker image
     inputs:
+      containerRegistry: ''
+      repository: '$(imageRepository)'
       command: build
-      Dockerfile: '**/Dockerfile'
+      Dockerfile: 'Dockerfile'
       tags: |
         $(tag)
 
-  - script: |
-      echo "✅ CI build completed successfully for WorkNexus!"
-    displayName: 'Build completion'
+  - script: echo "✅ CI pipeline finished."
+    displayName: 'Finish'
